fixed: minor spacing fixes and font size changes to make it better for mobile

--- a/react-frontend/src/sass/SearchBar.scss
+++ b/react-frontend/src/sass/SearchBar.scss
@@ -8,7 +8,7 @@
   align-items: flex-start;
 
   @media only screen and (max-width: $bp-medium) {
-    margin-bottom: 5rem;
+    margin-bottom: 3rem;
   }
 
   &-label {
@@ -30,7 +30,7 @@
     width: 45rem;
     padding: 0 1rem;
     border: none;
-    font-size: 1.8rem;
+    font-size: 2.5rem;
   }
   &-button {
     display: inline-block;
