--- a/react-frontend/src/sass/WeatherVacation.scss
+++ b/react-frontend/src/sass/WeatherVacation.scss
@@ -19,7 +19,7 @@
     @media only screen and (max-width: $bp-medium) {
       flex-direction: column;
       align-items: flex-start;
-      margin-left: 5rem;
+      margin: 3rem 0 1rem 5rem;
     }
 
     @media only screen and (max-width: $bp-micro) {
@@ -52,6 +52,7 @@
     font-size: 2.2rem;
     margin-bottom: 1rem;
     font-weight: bold;
+    text-align: start;
 
     @media only screen and (max-width: $bp-micro) {
       margin-bottom: 1rem;
